--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 
 
-	<script src="./scripts/dataList.js"></script>
+	<script src="./scripts/dataLists.js">
+		renderData();
+	</script>
 </body>
 </html>
